--- a/index.html
+++ b/index.html
@@ -5,18 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/global.css">
     <title>Pokedex</title>
-    <!-- normalice css -->    
+    <!-- normalice css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <section class="content">
       <h1>Pokedex</h1>
-      <ol>
-        <li>Bullbasour</li>
-        <li>venusaur</li>
-        <li>Charizar</li>
-        <li>charmander</li>
-        <li>Pikachu</li>
+      <ol class="pokemons">
+        <li>
+          Bulbasaur
+          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png" alt="Bulbasaur">
+        </li>
+        <li>
+          Ivysaur
+          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/002.png" alt="IvySaur">
+        </li>
+        <li>
+          Venusaur
+          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/003.png" alt="Venusaur">
+        </li>
+        <li>
+          Charmander
+          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/004.png" alt="Charmander">
+        </li>
+        <li>
+          Charmeleon
+          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/005.png" alt="Charmeleon">
+        </li>
+        <li>
+          Charizard
+          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/006.png" alt="Charizard">
+        </li>
       </ol>
   </section>
   <script src="assets/js/main.js" ></script>
