--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/pokedex.css">
     <title>Pokedex</title>
     <!-- normalice css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -11,33 +12,14 @@
 <body>
   <section class="content">
       <h1>Pokedex</h1>
-      <ol class="pokemons">
-        <li>
-          Bulbasaur
-          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png" alt="Bulbasaur">
-        </li>
-        <li>
-          Ivysaur
-          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/002.png" alt="IvySaur">
-        </li>
-        <li>
-          Venusaur
-          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/003.png" alt="Venusaur">
-        </li>
-        <li>
-          Charmander
-          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/004.png" alt="Charmander">
-        </li>
-        <li>
-          Charmeleon
-          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/005.png" alt="Charmeleon">
-        </li>
-        <li>
-          Charizard
-          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/006.png" alt="Charizard">
-        </li>
+      <ol id="pokemonList" class="pokemons">
       </ol>
+      <div class="pagination">
+        <button id="loadMoreButton" type="button" class="load-more">Carregar Mais</button>
+      </div>
   </section>
+  <script src="assets/js/pokeapi.js" ></script>
+  <script src="assets/js/pokemon-model.js" ></script>
   <script src="assets/js/main.js" ></script>
 </body>
 </html>
